--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -37,6 +37,10 @@
 - id: your_message
   translation: Your Message
 
+
+- id: thankyou_message
+  translation: Thank you, we will contact you soon!
+
 - id: links
   translation: links
 
